--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "use-delayed-render": "^0.0.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
